<resources>
    <string name="app_name">LOGIN</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="correo"> Email </string>
    <string name="contrasena"> Password </string>
    <string name="repetir"> Confirmar Contraseña</string>
    <string name="numero"> Numero de Telefono </string>
    <string name="Forgot"> Olvide Contraseña</string>
    <string name="Count">Crear Cuenta</string>
    <string name="img"> img </string>
    <string name="font"> APP </string>
    <string name="title_activity_form"> form</string>
    <string name="Name">Nombre</string>
    <string name="LastName"> Apellido </string>
    <string name="Celular"> Celular </string>
    <string name="Registrarse"> Registro</string>
    <string name="Registro"> Registrar</string>
    <string name="Iniciar">Iniciar Sesion</string>
    <string name="PasarActividad">Pasar Actividad</string>
    <string name="Home"> Inicio </string>
    <string name="title_activity_form_activity"> Form_activity</string>
    <string name="title_activity_home"> Home </string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="Titulo"> Home </string>
    <string name="Usuario"> Usuario </string>
    <string name="Welcome"> Bienvenido </string>
    <string name="Login"> LOGIN </string>

</resources>
